# BalaramaEngine

./: .gitignore  Balarama.sln  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  wasm_compile.bat
Balarama/: Balarama.vcxproj  Balarama.vcxproj.filters  main.cpp
Balarama/chess/: chess.cpp  chess.h  generator.cpp
Balarama/engine/: minimax.cpp  minimax.h
src/: bindings.cpp  main.cpp
src/chess/: chess.cpp  chess.h  generator.cpp  generator.h  move_structs.cpp  move_structs.h
src/engine/: minimax.cpp  minimax.h
webui/: balarama.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
webui/pages/: index.vue
webui/public/: balarama.js  balarama.wasm  engine-worker.js
